# node-zstd

./: .gitignore  Cargo.toml  LICENCE.md  README.md  index.d.ts  index.js  package-lock.json  package.json
.github/workflows/: CI.yml
__test__/: index.spec.mjs  test.json
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm64-gnu/: package.json
npm/linux-arm64-musl/: package.json
npm/linux-x64-gnu/: package.json
npm/linux-x64-musl/: package.json
npm/win32-x64-msvc/: README.md  package.json
src/: decoder.rs  encoder.rs  lib.rs
